--- a/abas.HTML
+++ b/abas.HTML
@@ -1,4 +1,4 @@
-<title>Abas</title>
+<title>trabalho do van van </title>
 <style>
 	
 	*{
@@ -80,7 +80,7 @@
   </li>
 		<li>
 					<input type="radio" name="tabs" class="rd_tabs" id="tab2">
-						<label for="tab2">Tab 2</label>
+						<label for="tab2">Lugar</label>
 						<div class="content">
            <article>
 Jujubas roxas são melhores
@@ -89,7 +89,7 @@ Jujubas roxas são melhores
 		</li>
 		<li>
 					<input type="radio" name="tabs" class="rd_tabs" id="tab3">
-						<label for="tab3">Tab 3</label>
+						<label for="tab3">Solução</label>
 						<div class="content">
         <article>
         	Jujubas rosas são mais gostosas
