--- a/abas.HTML
+++ b/abas.HTML
@@ -70,11 +70,11 @@
 				<li>
 					<input type="radio" name="tabs" class="rd_tabs" id="tab1"
 					checked>
-						<label for="tab1">Tab 1</label>
+						<label for="tab1">Problema</label>
 						<div class="content">
          <article>
-
-       
+         Não é de hoje que a falta de água vem sendo decorrente durante os séculos, mas nesses últimos tempos
+         Vem sendo mais fácil ficar sem água nas comunidades e cidades.
         </article>
 </div>
   </li>
@@ -83,7 +83,8 @@
 						<label for="tab2">Lugar</label>
 						<div class="content">
            <article>
-Jujubas roxas são melhores
+           Uma das regiões mais afetadas do Paraná é a fazenda Rio grande, sendo mais específico no bairro Veneza 
+           Msm o bairro tento poucos habitantes eles gastam mais água pois não sabem economizar a água.
           </article>
 </div>
 		</li>
@@ -92,7 +93,9 @@ Jujubas roxas são melhores
 						<label for="tab3">Solução</label>
 						<div class="content">
         <article>
-        	Jujubas rosas são mais gostosas
+        Uma das soluções mais viáveis séria a caixa d'água comunitária
+        Poderiamos encher com caminhões pipas de outras cidades que tenham uma reserva de água maior
+        Poderiam fazer um acordo e assim vai. 
         </article>
 </div>
 		</li>
